--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "author": "D2L Corporation",
   "license": "Apache-2.0",
+  "version": "1.0.0",
   "devDependencies": {
     "@brightspace-ui/visual-diff": "^1",
     "@open-wc/testing": "^2",
