--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "access": "public"
   },
   "files": [
-    "list-item-accumulator.js",
-    "/lang"
+    "list-item-accumulator.js"
   ],
   "scripts": {
     "lint": "npm run lint:eslint && npm run lint:lit",
