--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "Apache-2.0",
   "version": "1.1.8",
   "devDependencies": {
+    "@babel/eslint-parser": "^7",
     "@open-wc/testing": "^2",
     "@open-wc/testing-karma": "^3",
     "@webcomponents/webcomponentsjs": "^2",
@@ -31,9 +32,9 @@
     "deepmerge": "^4.2.2",
     "es-dev-server": "^1",
     "eslint": "^7",
-    "eslint-config-brightspace": "^0.7.0",
+    "eslint-config-brightspace": "^0.13",
     "eslint-plugin-html": "^6",
-    "eslint-plugin-lit": "^1",
+    "eslint-plugin-lit": "1.4.1",
     "eslint-plugin-sort-class-members": "^1",
     "karma-sauce-launcher": "^2",
     "lit-analyzer": "^1"
