--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
+          npm install @web/test-runner-playwright@0.9
           npx playwright install-deps
       - name: Lint
         run: npm run lint
