--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           npm install
           npm install @web/test-runner-playwright@0.9
-          npx playwright install-deps
+          npx playwright install --with-deps
       - name: Lint
         run: npm run lint
       - name: Unit Tests
