--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
   },
   "dependencies": {
     "@brightspace-ui/core": "^2",
-    "lit-element": "^3",
-    "lit-html": "^2"
+    "lit": "^2"
   }
 }
