--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 on: pull_request
 jobs:
   test:
+    name: Test
     timeout-minutes: 5
     runs-on: ubuntu-latest
     steps:
@@ -10,11 +11,10 @@ jobs:
         with:
           node-version-file: .nvmrc
       - name: Install dependencies
-        run: |
-          npm install
-          npm install @web/test-runner-playwright@0.9
-          npx playwright install --with-deps
-      - name: Lint
-        run: npm run lint
+        run: npm install
+      - name: Lint (JavaScript)
+        run: npm run lint:eslint
+      - name: Lint (CSS)
+        run: npm run lint:style
       - name: Unit Tests
-        run: npx web-test-runner --config web-test-runner.config.js --group default --playwright --browsers chromium firefox webkit
+        run: npm run test:unit
