--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,10 @@ on:
   push:
     branches:
       - main
+      - '[0-9]+.x'
+      - '[0-9]+.[0-9]+.x'
 jobs:
   release:
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
     name: Release
     timeout-minutes: 5
     runs-on: ubuntu-latest
@@ -14,8 +15,7 @@ jobs:
         uses: Brightspace/third-party-actions@actions/checkout
         with:
           persist-credentials: false
-      - name: Setup Node
-        uses: Brightspace/third-party-actions@actions/setup-node
+      - uses: Brightspace/third-party-actions@actions/setup-node
         with:
           node-version-file: .nvmrc
       - name: Semantic Release
